; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonmemmapmemalign.c_memalign_free.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonmemmapmemalign.c_memalign_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @memalign_free(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8**, align 8
  store i8* %0, i8** %2, align 8
  store i8** null, i8*** %3, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = icmp ne i8* %4, null
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  br label %14

7:                                                ; preds = %1
  %8 = load i8*, i8** %2, align 8
  %9 = bitcast i8* %8 to i8**
  store i8** %9, i8*** %3, align 8
  %10 = load i8**, i8*** %3, align 8
  %11 = getelementptr inbounds i8*, i8** %10, i64 -1
  %12 = load i8*, i8** %11, align 8
  %13 = call i32 @free(i8* %12)
  br label %14

14:                                               ; preds = %7, %6
  ret void
}

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
